--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ server:
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/inventory
-    username: <Yourusername>
-    password: <Yourpassword>
+    username: postgres
+    password: 123odedoyin
   jpa:
     hibernate:
       ddl-auto: update
