Added postman link to API documentation

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ server:
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/inventory
-    username: postgres
-    password: 123odedoyin
+    username: <your_username>
+    password: <your_password>
   jpa:
     hibernate:
       ddl-auto: update
